<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:orientation="vertical"
    tools:context="in.saibabatemplevayalpad.sreeshirdisaibabatemple.ContactUs">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shapes"
        android:text="@string/contact_us"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shapes"
        android:padding="4dp"
        android:text="@string/e_mail"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:onClick="sendMail"
        android:text="@string/admin_saibabatemplevayalpad_in_n_jk_vayalpad_yahoo_com"
        android:textAlignment="textEnd"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shapes"
        android:padding="4dp"
        android:text="@string/contact_number"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:onClick="call"
        android:text="@string/_9440080402_krishna_murthy_n_9490092477_rama_devi"
        android:textAlignment="textEnd"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shapes"
        android:padding="4dp"
        android:text="@string/address"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/sree_shirdi_sai_baba_temple_nsai_baba_nagar_nvayalpad_517299_nchittoor_district_nandhra_pradesh"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

</LinearLayout>
