<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openDsevas"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/daily_sevas" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openDSchedule"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/daily_schedule" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openNews"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/news" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Baba Sevas"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:text="Daily Schedule"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.16"
            android:text="News"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openAarathis"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/baba_aarathi" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openVideo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/video" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openFacebook"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/facebook"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:gravity="center_horizontal"
            android:text="@string/baba_aarathi_s"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:gravity="center_horizontal"
            android:text="@string/temple_video"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:gravity="center_horizontal"
            android:text="@string/facebook"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openWebsite"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/website" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openLocation"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/location" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="openContactUs"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/contact_us"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/website"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="Location"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.64"
            android:gravity="center_horizontal"
            android:text="Contact Us"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:text="\u00A9 Sree Shirdi Sai Baba Charitable Trust"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:text="Developed by Jeevan J"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

</LinearLayout>